--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -19,7 +19,7 @@ body {
   padding: 0;
   margin: 0;
   color: #444;
-  background: #ddd9d6 url(/images/background.gif) repeat-x top left; }
+  background: #ddd9d6 url(/themes/ansuz_theme_insight_card_services/images/background.gif) repeat-x top left; }
   body .flash {
     font-size: 1.2em;
     font-weight: 600;
@@ -54,7 +54,7 @@ body {
     body .header h1 {
       width: 441px;
       height: 91px;
-      background: transparent url(/images/logo.png) no-repeat top left;
+      background: transparent url(/themes/ansuz_theme_insight_card_services/images/logo.png) no-repeat top left;
       margin: 0; }
       body .header h1 span {
         display: none; }
@@ -74,39 +74,10 @@ body {
   padding: 40px 7px; }
 
 .module {
-  background: #ddd9d6 url(/images/background.gif) repeat-x bottom left;
+  background: #ddd9d6 url(/themes/ansuz_theme_insight_card_services/images/background.gif) repeat-x bottom left;
   color: #444;
   padding: 5px;
   text-align: left; }
-
-.front-nav ul {
-  list-style-type: none;
-  margin: 0 auto;
-  width: 800px;
-  padding: 0; }
-  .front-nav ul li {
-    display: block;
-    float: left;
-    width: 398px;
-    height: 200px;
-    text-align: center;
-    border-top: 1px solid #888;
-    border-left: 1px solid #888; }
-    .front-nav ul li.logout {
-      display: none; }
-    .front-nav ul li a {
-      display: block;
-      width: 100%;
-      height: 200px;
-      text-align: center;
-      font-size: 1.7em;
-      text-decoration: none;
-      background: #ddd9d6 url(/images/background.gif) repeat-x bottom left; }
-      .front-nav ul li a:hover {
-        background: #ddd9d6 url(/images/background.gif) repeat-x top left; }
-      .front-nav ul li a span {
-        position: relative;
-        top: 80px; }
 
 .nav {
   width: 950px;
@@ -124,18 +95,18 @@ body {
       width: auto;
       text-align: center;
       text-align: center;
-      background: #ddd9d6 url(/images/background.gif) repeat-x top left;
-      font-size: .8em;
+      background: #ddd9d6 url(/themes/ansuz_theme_insight_card_services/images/background.gif) repeat-x top left;
+      font-size: 1em;
       height: 25px; }
       .nav ul li a {
         display: block;
         text-decoration: none;
-        background: #ddd9d6 url(/images/background.gif) repeat-x bottom left; }
-        .nav ul li a:hover {
-          background: #ddd9d6 url(/images/background.gif) repeat-x top left; }
-      .nav ul li span {
+        background: #ddd9d6 url(/themes/ansuz_theme_insight_card_services/images/background.gif) repeat-x bottom left; }
+        .nav ul li a:hover, .nav ul li.active  a{
+          background: #ddd9d6 url(/themes/ansuz_theme_insight_card_services/images/background.gif) repeat-x top left; }
+      .nav ul li a{
         padding: 5px 15px;
-        display: block; }
+         }
 
 #login-container {
   width: 300px;
@@ -242,13 +213,16 @@ table.journal {
     vertical-align: top;
     font-size: .8em; }
 
-.footer {
+#footer {
   padding: 10px 0 20px;
-  background: #DDD9D6 url(/images/background.gif) repeat-x scroll left top;
+  background: #DDD9D6 url(/themes/ansuz_theme_insight_card_services/images/background.gif) repeat-x scroll left top;
   border-top: 2px solid #ccc;
   text-align: center; }
-  .footer .content-wrapper {
-    text-align: center; }
+  #footer .footer {
+    text-align: center;
+    width: 950px;
+    margin: 0 auto;
+ }
 
 .valid-css {
   position: absolute;
@@ -270,7 +244,7 @@ table.journal {
       width: auto;
       margin-bottom: 5px; }
       .admin-top .admin-toolbar li a {
-        background: transparent url(/images/toolbar-bg.png) repeat scroll 0 0;
+        background: transparent url(/themes/ansuz_theme_insight_card_services/images/toolbar-bg.png) repeat scroll 0 0;
         border-bottom-color: #ddd;
         border-bottom-style: solid;
         border-bottom-width: 3px;
@@ -281,7 +255,7 @@ table.journal {
         padding: 6px 10px;
         text-decoration: none; }
         .admin-top .admin-toolbar li a:hover {
-          background: transparent url(/images/toolbar-bg.png) repeat scroll left center; }
+          background: transparent url(/themes/ansuz_theme_insight_card_services/images/toolbar-bg.png) repeat scroll left center; }
         .admin-top .admin-toolbar li a img {
           border: 0;
           margin: 0 5px 0 0; }
@@ -307,3 +281,6 @@ div.store-details-sheet {
       width: 33%; }
   div.store-details-sheet .contact-info {
     text-align: left; }
+#navigation h3{
+  display:none;
+}
